# paseri

./: .gitignore  README.md
backend/: main.py  pyproject.toml  utils.py
frontend/: package.json
frontend/src/: App.tsx
frontend/src/components/: Navbar.tsx  Question.tsx  Upload.tsx
frontend/src/pages/: AskPage.tsx  UploadPage.tsx
